# hopf-decoherence

./: .gitignore  CITATION.cff  LICENSE  README.md  generate_convergence_plots.py  pyproject.toml
paper/: LICENSE  main.tex
paper/figures/: decomposition.py  spectral_sequence.py
scripts/: defect_tqft_partition.py  extract_cocycles.py  generate_paper.py  physical_interpretation.py  sl3_deep_investigation.py  sl3_extended_analysis.py  sl4_extended_numerics.py  so5_verification.py  verify_D2.py  verify_bplus_sl2_hh2.py  verify_bplus_sl2_rigorous.py  verify_non_hopf.py  verify_sl2_hh2.py  verify_sl2_hh2_fast.py  verify_sl2_hh2_weighted.py  verify_sl3_bplus_hh2.py  vogel_data.json  vogel_parameters.py  vogel_sym2_decomposition.py  vogel_sym2_results.json  wrt_so_sp.py  wrt_so_sp_results.json
src/hopf_decoherence/: D_tilde_squared_general_derivation.py  __init__.py  analytical_proof_laplace.py  analytical_proof_master_identity.py  analytical_trace_deficit.py  bcgp_btz.py  bcgp_gravity_normalization.py  bh_entropy_universal.py  btz_complete_entropy.py  btz_heat_kernel.py  bulk_reconstruction.py  cardy_log_correction.py  chern_simons_1loop.py  chern_simons_derivation.py  continuity_theorem.py  coproduct.py  d2_scaling_analysis.py  d2_zraw_coincidence.py  defect_networks.py  defect_tqft.py  deficiency_log_connection.py  dehn_twist_partition.py  drinfeld_center.py  extended_sl2_numerics.py  falsifiable_predictions.py  formal_proof_chern_simons.py  formal_proof_continuity.py  formal_proof_hilbert_space.py  formal_proof_information.py  formal_proof_modular_invariance.py  formal_proof_positivity.py  formal_proof_zero_mode_map.py  higher_genus_predictions.py  higher_rank_analysis.py  higher_spin_crosscheck.py  hilbert_space_theorem.py  holographic_dictionary.py  information_radical.py  information_theorem.py  lcft_characters.py  (+49 more)
tests/: test_defect_tqft.py  test_new_modules.py  test_q_algebra.py  test_rank_deficiency.py  test_sl2_hh2_bar_complex.py  test_sl3_bplus_hh2.py
