[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hopf-decoherence"
version = "1.0.0"
description = "Coproduct rank deficiency of u_q(sl_n) at roots of unity and the BCGP non-semisimple TQFT log correction for BTZ black-hole entropy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Parham Khairkhah", email = "pkhairkh@users.noreply.github.com" },
]
keywords = [
    "quantum groups",
    "roots of unity",
    "Hopf algebras",
    "non-semisimple TQFT",
    "BCGP",
    "BTZ black hole",
    "logarithmic entropy correction",
    "Chern-Simons theory",
    "modified trace",
    "projective modules",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "sympy>=1.12",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/pkhairkh/hopf-decoherence"
Repository = "https://github.com/pkhairkh/hopf-decoherence"
Issues = "https://github.com/pkhairkh/hopf-decoherence/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
