[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hopf-decoherence"
version = "1.0.0"
description = "Companion code for 'Hochschild Cohomology of Small Quantum Groups at Roots of Unity' — bar-complex verification of HH^2(u_q(sl_2), C) = 3 at ell = 3, plus auxiliary BCGP/BTZ physics code"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Parham Khairkhah", email = "pkhairkh@icloud.com" },
]
keywords = [
    "Hochschild cohomology",
    "quantum groups",
    "roots of unity",
    "Drinfeld double",
    "Nichols algebra",
    "Hopf algebras",
    "BCGP TQFT",
    "BTZ black hole",
    "modified trace",
    "projective modules",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "sympy>=1.12",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/pkhairkh/hopf-decoherence"
Repository = "https://github.com/pkhairkh/hopf-decoherence"
Issues = "https://github.com/pkhairkh/hopf-decoherence/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
